--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,9 @@
     "paths": {
       "@/*": ["./*"],
       "@entrypoint": ["./index.ts"]
-    }
+    },
+    "rootDir": "src"
   },
-  "include": ["src", "vite.config.ts"],
-  "exclude": ["node_modules", "**/__test__"]
+  "include": ["src"],
+  "exclude": ["node_modules", "**/__test__", "vite.config.ts"]
 }
